--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,6 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.sql.init.mode=always
 
-logging.level.root=debug
+logging.level.root=info
