--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,5 @@
 
+
 spring.datasource.url=jdbc:mysql://localhost:3306/vpp
 spring.datasource.username=root
 spring.datasource.password=root
@@ -6,3 +7,21 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.root=info
+
+# Tomcat Thread Pool Settings
+server.tomcat.max-connections=10000
+server.tomcat.threads.max=500
+server.tomcat.threads.min-spare=25
+
+# Hikari Connection Pool Settings
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.idle-timeout=60000 
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.pool-name=VppHikariPool
+
+# Hibernate / JPA Settings
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
